Bug 388361, dropdowns in font dialog not always working, make sure to reset cached size when a frame is added or removed, r+sr=bz